# Rust-Machine-Guard

./: Cargo.toml  README.md  package-lock.json  package.json  run.bat  socket.js
assets/: index.html  machine.html
assets/mal/: mal.html
src/: main.rs
static/: anasininami.js  fcs1.js  style.css
static/junk/: socket.js
static/machine/: main.js  style.css
