[package]
name = "security"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
get_if_addrs = "0.5"
actix-files = "0.6" # Bu satırı ekleyin
actix-session = "0.5" # veya mevcut stabil versiyon
actix-web-actors = "4.3.0"
actix = "0.13.3"
zeroize = "1.7.0"
bytestring = "1.3.1"
